add redis websocket service